# anvil

./: .gitignore  .loom-managed  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  ROADMAP.md  WORK_LOG.md  WORK_PLAN.md  pyproject.toml
.claude/commands/loom/: release.md
.loom/: CLAUDE.md  install-metadata.json
anvil/agents/: README.md  anvil-memo-drafter.md  anvil-memo-reviser.md  anvil-memoir-auditor.md  anvil-memoir-drafter.md  anvil-memoir-figurer.md  anvil-memoir-reviewer.md  anvil-memoir-reviser.md
anvil/lib/: README.md  __init__.py  convergence.py  critics.py  cross_thread_refs.py  evidence_check.py  export_schema.py  inventorship_evidence.py  marp_lint.py  numeric_consistency.py  parity.py  project_brief.py  project_detect.py  render.py  render_gate.py  review_schema.json  review_schema.py  revise_consistency.py  rhetoric_lint.py  rubric.py  rubric_schema.json  sidecar.py
anvil/lib/figures/: __init__.py  anvil.mplstyle  mermaid-theme.json  palette.py
anvil/lib/latex/: anvil-doc.cls
anvil/lib/marp/: brand-theme-starter.css  config.yml
anvil/lib/memo/: README.md  styles.css  template.html  template.tex
anvil/lib/snippets/: audit.md  brand-theme-porting.md  cite.md  critics.md  directed_revision.md  git_sync.md  progress.md  rubric.md  scorecard_kind.md  state_machine.md  thread_state.md  version_layout.md  voice_grounding.md
anvil/skills/: README.md
anvil/skills/datasheet/: README.md  SKILL.md  rubric.md
anvil/skills/deck/: README.md  SKILL.md  rubric.md
anvil/skills/essay/: README.md  SKILL.md  rubric.md
anvil/skills/installation/: SKILL.md
anvil/skills/ip-uspto/: README.md  SKILL.md  rubric.md
anvil/skills/ip-uspto-provisional/: README.md  SKILL.md  rubric.md
anvil/skills/memo/: SKILL.md  rubric.md
anvil/skills/memoir/: README.md  SKILL.md  rubric.md
anvil/skills/paper/: SKILL.md  rubric.md
anvil/skills/primer/: SKILL.md
anvil/skills/project-migrate/: SKILL.md
anvil/skills/project-share/: SKILL.md
anvil/skills/proposal/: README.md  SKILL.md  rubric.md
anvil/skills/pub/: SKILL.md  rubric.md
anvil/skills/report/: SKILL.md  rubric.md
anvil/skills/rubric-rebackport/: SKILL.md
anvil/skills/slides/: SKILL.md  rubric.md
anvil/skills/spec/: README.md  SKILL.md  rubric.md
anvil/templates/: README.md  SKILL.md
anvil/templates/voice/: README.md  VALUES.template.md  VOCABULARY.template.md
scripts/: README.md  generate-anvil-agents.py  install-anvil.sh  version.sh
tests/: conftest.py
tests/agents/: test_agent_frontmatter_schema.py  test_agent_registry.py  test_generator_idempotent.py  test_install_anvil_agents.py  test_tool_scope_by_role.py
tests/lib/: test_brand_theme_porting.py  test_cite.py  test_command_docs_no_portfolio_wide_sweep.py  test_convergence.py  test_convergence_no_go.py  test_critics.py  test_critics_no_go_adapter.py  test_cross_thread_refs.py  test_evidence_check.py  test_export_schema_drift.py  test_figure_content.py  test_figure_conventions_doc.py  test_figures.py  test_figures_mermaid_classdefs.py  test_figures_unicode_fallback.py  test_git_sync_gitignore_guard.py  test_git_sync_snippet.py  test_hyperlink_resolver.py  test_inventorship_evidence_promotion.py  test_latest_resolution.py  test_latest_symlinks_exclusion.py  test_latex_render.py  test_lib_imports.py  test_marp_lint.py  test_marp_no_stdin_docs.py  test_memo_render_detection.py  test_memo_styles_css.py  test_memo_template_css_link.py  test_memo_theme_integration.py  test_memo_xelatex_fallback.py  test_no_stale_anvil_lib_asset_paths.py  test_numeric_consistency.py  test_parity.py  test_perspective_snippet.py  test_project_brief.py  test_project_brief_corpus.py  test_project_brief_voice.py  test_project_brief_waivers.py  test_project_detect.py  test_project_discovery.py  (+20 more)
tests/lib/fixtures/: rhetoric_clean_memo.md
tests/scripts/: test_install_agent_prune_on_narrowing.py  test_install_agents_skill_filter.py  test_install_always_on_help.py  test_install_anvil_gitignore.py  test_install_anvil_gitignore_tracked_hint.py  test_install_drift_note.py  test_install_dry_run_honesty.py  test_install_hash_upgrade.py  test_install_lib_hash_upgrade.py  test_install_monorepo_coexistence.py  test_install_non_tty.py  test_install_quoting.py  test_install_shim_depth.py  test_install_skill_lib_callable.py  test_install_skill_removal_prune.py  test_install_skills_validation.py  test_install_staleness_report.py  test_install_theme_scaffold.py  test_install_uv_runnable.py  test_install_values_template.py  test_install_vision_pages_gitignore.py  test_install_voice_gitignore.py  test_install_voice_scaffold.py  test_version_bump.py  test_version_drift.py  test_version_set.py  test_version_tag_changelog.py
tests/skills/datasheet/: test_datasheet_audit_sidecar_atomicity_doc.py  test_datasheet_git_sync_doc.py  test_datasheet_review_sidecar_atomicity_doc.py  test_datasheet_review_single_file_safe_doc.py
tests/skills/deck/: test_deck_audit_sidecar_atomicity_doc.py  test_deck_critical_flag_business_model_doc.py  test_deck_design_sidecar_atomicity_doc.py  test_deck_economics_dim10_ownership_doc.py  test_deck_economics_perspective_crosscheck_doc.py  test_deck_economics_sidecar_atomicity_doc.py  test_deck_fabrication_attribution_doc.py  test_deck_git_sync_doc.py  test_deck_imagegen_doc.py  test_deck_iteration_cap_rationale_doc.py  test_deck_market_perspective_crosscheck_doc.py  test_deck_market_sidecar_atomicity_doc.py  test_deck_narrative_sidecar_atomicity_doc.py  test_deck_perspective_doc.py  test_deck_perspective_sidecar_atomicity_doc.py  test_deck_refs_back_check_doc.py  test_deck_review_parity_economic_subset_doc.py  test_deck_review_perspective_substrate_dim10_doc.py  test_deck_review_rescore_mode_doc.py  test_deck_review_sidecar_atomicity_doc.py  test_deck_rubric_overrides_doc.py  test_deck_rubric_version_transition_doc.py  test_deck_vision_sidecar_atomicity_doc.py  test_parity_lint.py
tests/skills/essay/: test_essay_git_sync_doc.py  test_essay_provenance_doc.py  test_essay_review_sidecar_atomicity_doc.py  test_essay_sidecar_atomicity_doc.py
(+518 files in other folders)
