# Anvil — Python project metadata
#
# This is Anvil's FIRST declared Python-deps file. The philosophy is:
#
#   Anvil prefers subprocess-only operation. Python deps are added only when
#   they enable a check that's genuinely better than the subprocess
#   equivalent, and *detector* deps are ALWAYS optional — the core skills
#   ship with as few Python deps as possible so that
#   `python3 -c 'from anvil.lib.render import ...'` works in a stock venv
#   with no extras installed.
#
# Exception: `pydantic` is declared as a base `[project]` dep because it's
# the schema library `anvil/lib/review_schema.py` is built on and that
# `anvil/lib/__init__.py` transitively requires at import time (`cite`,
# `critics`, `rubric`, `convergence`, `vision` all consume the schema). It
# is not an opt-in detector; it is load-bearing for the package's import
# chain. Detector-style additions still go under `[project.optional-dependencies]`.
#
# Same exception, same rationale: `pyyaml` is declared as a base `[project]`
# dep because `anvil/lib/rubric.py` does a top-level `import yaml` (the
# rubric loader calls `yaml.safe_load`), and `anvil/lib/__init__.py`
# re-exports `Rubric` / `load_rubric` / `discover_venue_rubric` from
# `rubric` — so `from anvil.lib import ...` (and anything that touches
# the rubric loader, e.g. `anvil.lib.render_gate`) transitively requires
# yaml at import time. Same load-bearing-for-import-chain shape as
# pydantic; same rule applies. See issue #231 for the canary reproducer.
#
# Practical consequence: every *detector* dependency below lives under
# `[project.optional-dependencies]`. The base `[project]` table declares
# only `pydantic` and `pyyaml`. Consumers opt in to advanced detectors
# per-skill via extras:
#
#     uv pip install -e .[auto_shrink]    # Marp auto-shrink lint (deck)
#
# Future advanced/optional checks that need a third-party Python library
# should land here as additional extras (one extra per detector / capability),
# not as a base runtime requirement. The preflights in `anvil/lib/render.py`
# (see `check_mmdc_available`, `check_pdfjam_available`,
# `check_auto_shrink_deps_available`) detect each capability at runtime and
# emit a remediation message if it isn't available — they never hard-fail
# the surrounding pipeline.
#
# Test discipline for optional-extras-gated code: any test file that depends
# on an optional extra (e.g. `Pillow`/`numpy` for `[auto_shrink]`) must
# `pytest.importorskip(<module>)` it at module top — or per-test if only a
# subset of tests need the extra. This makes the test suite run cleanly on a
# stock venv without extras (tests skip with a clear reason rather than
# erroring at collection or first fixture call). See
# `tests/lib/test_figures.py` for the module-level pattern and
# `tests/lib/test_cite.py` for the `pytest.mark.network` env-gated pattern.
#
# Tooling: this file follows PEP 621 + uv conventions. `uv pip install -e .`
# installs the framework code editable; `[tool.uv]` is a marker so uv's
# tooling treats this as a uv-managed project (no lockfile is checked in
# yet; the optional-extra set is small and pinned only with lower bounds).

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "anvil"
version = "0.4.0"
description = "AI-orchestrated artifact creation using the filesystem as the coordination layer."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Anvil contributors" },
]
keywords = ["ai", "artifacts", "review", "rubric", "marp", "latex"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Libraries",
]

# Base install: two runtime Python deps. Anvil's core is otherwise
# subprocess-only (marp, mmdc, pdftoppm, pdfjam, pandoc are all CLI
# binaries). Both base deps are load-bearing for `anvil/lib/__init__.py`'s
# import chain (not opt-in detectors):
#   - `pydantic` is the schema library that `anvil/lib/review_schema.py`
#     and downstream modules (`critics`, `rubric`, `cite`, `vision`,
#     `convergence`) depend on.
#   - `pyyaml` is consumed by `anvil/lib/rubric.py`'s top-level
#     `import yaml` (the rubric loader uses `yaml.safe_load`). Since
#     `anvil/lib/__init__.py` re-exports `Rubric` / `load_rubric` /
#     `discover_venue_rubric`, `from anvil.lib import ...` transitively
#     requires yaml at import time — same shape as the pydantic
#     exception. See issue #231 for the canary reproducer.
# See the header comment above for the broader philosophy.
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
]

# Opt-in extras. Each one corresponds to a single advanced check that needs
# a third-party Python library. The preflights in `anvil/lib/render.py`
# graceful-skip when an extra is missing — the surrounding command still
# runs and emits a clear remediation message.
[project.optional-dependencies]
# `anvil:deck` silent-Marp-auto-shrink lint (issue #102 / #100b).
# Detects pages where Marp's CSS fit-to-frame scaling has silently shrunk
# the slide. Image-based — samples background from corner patches of the
# already-rendered per-page PNG, takes argmax/argmin on rows-with-content
# to compute a content bbox. Needs PIL/numpy for the pixel arithmetic.
auto_shrink = [
    "Pillow>=10.0",
    "numpy>=1.24",
]
# `anvil:memo` render-gate content-bbox image check (issue #395).
# Check 3 of the advisory `memo_image_dimensions` gate dimension: flags
# images whose non-background content bbox occupies < 25% of the canvas —
# the precise signature of the matplotlib tight-bbox + rogue-artist +
# transparent-canvas failure (16,622×5,652 px canary). Same Pillow/numpy
# set as `[auto_shrink]` (the bbox algorithm is the same corner-sampling
# approach); declared separately so consumers can opt in per capability.
# The stdlib header checks (pixel ceiling, aspect, declared-vs-actual)
# run without this extra.
image_lint = [
    "Pillow>=10.0",
    "numpy>=1.24",
]
# Memo HTML-to-PDF render chain (preferred engine).
# weasyprint 69.0 is not compatible with Python 3.14 (CSS module import fails).
# Use xelatex as the fallback engine on Python 3.14+ until weasyprint ships
# Python 3.14 support. See issue #306 for the canary reproducer.
html = [
    "weasyprint>=60.0 ; python_version < '3.14'",
]
# Test-time dev deps. Not required for any shipped skill; install for
# running the test suite locally.
dev = [
    "pytest>=7.4",
]

[project.urls]
Homepage = "https://github.com/rjwalters/anvil"
Issues = "https://github.com/rjwalters/anvil/issues"

# --- uv tooling marker -------------------------------------------------------
# Present so `uv` recognises this as a uv-managed project. No locked deps
# yet; the extras above use lower-bound pins only.
[tool.uv]

# --- setuptools: keep the package layout minimal ----------------------------
# We do not currently distribute Anvil as a wheel. This config exists so
# `uv pip install -e .` works against the source tree (the editable install
# is the only supported invocation today). Skills and lib live under
# `anvil/`; tests under `tests/` and `anvil/skills/*/tests/` are not
# packaged.
[tool.setuptools.packages.find]
where = ["."]
include = ["anvil*"]
exclude = ["tests*", "*.tests", "*.tests.*", "tests.*"]
